--- a/templates/home.html
+++ b/templates/home.html
@@ -50,26 +50,26 @@
 
 
 
-          <h2>Items</h2>
+          <h2>Latest Items</h2>
           <div class="table-responsive">
             <table class="table table-striped table-sm">
               <thead>
                 <tr>
-                  <th>#</th>
-                  <th>Header</th>
-                  <th>Header</th>
-                  <th>Header</th>
-                  <th>Header</th>
+                  <th>Name</th>
+                  <th>Price</th>
+                  <th>Description</th>
+                  <th>Categroy</th>
                 </tr>
               </thead>
               <tbody>
+              {% for products in items %}
                 <tr>
-                  <td>test</td>
-                  <td>test</td>
-                  <td>test</td>
-                  <td>test</td>
-                  <td>test</td>
+                  <td>{{products.name}}</td>
+                  <td>{{products.price}}</td>
+                  <td>{{products.description}}</td>
+                  <td>{{products.category.name}}</td>
                 </tr>
+              {% endfor %}
               </tbody>
             </table>
           </div>
