--- a/templates/category.html
+++ b/templates/category.html
@@ -13,11 +13,12 @@
 
   <!-- Custom styles for this template -->
   <link href="{{url_for('static', filename='dashboard.css')}}" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 </head>
 
 <body>
   <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0">
-    <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">Catalog App</a>
+    <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#"><h2>Catalog App</h2></a>
     <input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search">
     <ul class="navbar-nav px-3">
       <li class="nav-item text-nowrap">
@@ -28,13 +29,14 @@
 
   <div class="container-fluid">
     <div class="row">
-      <nav class="col-md-2 d-none d-md-block bg-light sidebar">
+      <nav class="col-md-2 d-none d-md-block bg-dark sidebar">
         <div class="sidebar-sticky">
+          <h4 class="sidebar-heading">Browse Categories</h4>
           <ul class="nav flex-column">
-            {% for cat in category %}
-            <li class="nav-item">
-              <a class="nav-link" href="#">
-                <span data-feather="home"></span>
+            {% for cat in categories %}
+            <li class="nav-item" >
+              <a class="nav-link {% if category ==cat.name %} active {% endif %}" href="/catalog/{{cat.name}}/{{cat.id}}/view/">
+                <i class="fas fa-book"></i>
                 {{cat.name}}
               </a>
             </li>
@@ -45,7 +47,7 @@
 
       <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
         <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
-          <h1 class="h2">Welcome to Catalog App</h1>
+          <h1 class="h2">{{category}}</h1>
           <div class="btn-toolbar mb-2 mb-md-0">
             <div class="btn-group mr-2">
               <button class="btn btn-primary btn-sm" onclick="modalPop('newProduct')">+ Add Product</button>
@@ -54,29 +56,16 @@
         </div>
 
 
-
-        <h2>{{category}}</h2>
-        <div class="table-responsive">
-          <table class="table table-striped table-sm">
-            <thead>
-              <tr>
-                <th>Name</th>
-                <th>Price</th>
-                <th>Description</th>
-                <th>Categroy</th>
-              </tr>
-            </thead>
-            <tbody>
-              {% for product in products %}
-              <tr>
-                <td>{{product.name}}</td>
-                <td>{{product.price}}</td>
-                <td>{{product.description}}</td>
-                <td>{{product.category.name}}</td>
-              </tr>
-              {% endfor %}
-            </tbody>
-          </table>
+        <div class="items">
+          {% for product in products %}
+          <div class="item">
+            <img src="http://placehold.jp/fffff/cccccc/188x200.png?text={{products.name}}+image">
+            <div class="productName"><h3>{{product.name}}</h3></div>
+            <div class="productPrice">{{product.price}}</div>
+            <div class="productCategory">category: <span class="badge badge-light">{{category}}</span></div>
+            <a href="/catalog/{{category}}/{{products.name}}/{{products.id}}/view/" class="btn btn-sm btn-primary btn-block">View Product</a>
+          </div>
+          {% endfor %}
         </div>
       </main>
     </div>
