--- a/static/dashboard.css
+++ b/static/dashboard.css
@@ -1,24 +1,49 @@
 @media (min-width: 1200px) {
-   .modal-lg {
-      margin: auto;
-   }
+  .modal-lg {
+    margin: auto;
+  }
+  .productName h3{
+    min-height: 70px;
+    color:#3d5170;
+  }
+}
+.sidebar-heading {
+  background: #000;
+  color: #fff;
+  padding: 5px;
+  margin-left: -15px;
+  margin-right: -15px;
+  padding-left: 14px;
+}
+.nav-link{
+  color:#fff;
+}
+.nav-link.active, .nav-link:hover{
+  color:#1dcaff !important;
 }
 
 /* Product grid rules */
 .items {
-	display: flex;
-	flex-wrap: wrap;
-	margin-left: -10px;
-	margin-top: -10px;
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -10px;
+  margin-top: -10px;
 }
 .items .item {
-	flex: 1 0 200px;
+  flex: 1 0 200px;
   box-sizing: border-box;
-  background: #e0ddd5;
+  background: #ffff;
   color: #171e42;
   padding: 10px;
-	margin-left: 10px;
-	margin-top: 10px;
+  margin-left: 10px;
+  margin-top: 10px;
+  border:1px solid #ccc;
+  border-radius: 8px;
+}
+.items .item img{
+  border: 1px dashed #ccc;
+  margin: auto;
+  margin-bottom: 10px
 }
 @media (min-width: 410px) {
   .items .item {
