--- a/templates/home.html
+++ b/templates/home.html
@@ -1,83 +1,85 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Item Catalog Application">
-    <meta name="author" content="Clain Dsilva">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="Item Catalog Application">
+  <meta name="author" content="Clain Dsilva">
 
-    <title>Item Catalog Application</title>
+  <title>Item Catalog Application</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="{{url_for('static', filename='bootstrap.min.css')}}" rel="stylesheet">
+  <!-- Bootstrap core CSS -->
+  <link href="{{url_for('static', filename='bootstrap.min.css')}}" rel="stylesheet">
+  <!-- Custom styles for this template -->
+  <link href="{{url_for('static', filename='dashboard.css')}}" rel="stylesheet">
+  <!-- FontAwesome library for icons-->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+</head>
 
-    <!-- Custom styles for this template -->
-    <link href="{{url_for('static', filename='dashboard.css')}}" rel="stylesheet">
-  </head>
+<body>
+  <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0">
+    <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#"><h2>Catalog App</h2></a>
+    <input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search">
+    <ul class="navbar-nav px-3">
+      <li class="nav-item text-nowrap">
+        <a class="nav-link" href="#">Sign in</a>
+      </li>
+    </ul>
+  </nav>
 
-  <body>
-    <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0">
-      <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">Catalog App</a>
-      <input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search">
-      <ul class="navbar-nav px-3">
-        <li class="nav-item text-nowrap">
-          <a class="nav-link" href="#">Sign in</a>
-        </li>
-      </ul>
-    </nav>
+  <div class="container-fluid">
+    <div class="row">
+      <nav class="col-md-2 d-none d-md-block bg-dark sidebar">
+        <div class="sidebar-sticky">
+          <h4 class="sidebar-heading">Browse Categories</h4>
+          <ul class="nav flex-column">
+            {% for cat in categories %}
+            <li class="nav-item">
+              <a class="nav-link" href="/catalog/{{cat.name}}/{{cat.id}}/view/">
+                <i class="fas fa-book"></i>
+                {{cat.name}}
+              </a>
+            </li>
+            {% endfor %}
+          </ul>
+        </div>
+      </nav>
 
-    <div class="container-fluid">
-      <div class="row">
-        <nav class="col-md-2 d-none d-md-block bg-light sidebar">
-          <div class="sidebar-sticky">
-            <ul class="nav flex-column">
-              {% for cat in category %}
-              <li class="nav-item">
-                <a class="nav-link" href="#">
-                  <span data-feather="home"></span>
-                  {{cat.name}}
-                </a>
-              </li>
-              {% endfor %}
-            </ul>
+      <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
+        <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
+          <h1 class="h2">Latest Products</h1>
+          <div class="btn-toolbar mb-2 mb-md-0">
+            <div class="btn-group mr-2">
+              <button class="btn btn-primary btn-sm" onclick="modalPop('newProduct')">+ Add Product</button>
+            </div>
           </div>
-        </nav>
-
-        <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
-          <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
-            <h1 class="h2">Dashboard</h1>
-          </div>
+        </div>
 
 
+      <div class="items">
+        {% for product in products %}
+        <div class="item">
+          <img src="http://placehold.jp/fffff/cccccc/188x200.png?text={{products.name}}+image">
+          <div class="productName"><h3>{{product.name}}</h3></div>
+          <div class="productPrice">{{product.price}}</div>
+          <div class="productCategory">category: <span class="badge badge-light">{{product.category.name}}</span></div>
+          <a href="/catalog/{{product.category.name}}/{{product.name}}/{{product.id}}/view/" class="btn btn-sm btn-primary btn-block">View Product</a>
+        </div>
+        {% endfor %}
+      </div>
+      </main>
+    </div>
+  </div>
 
-          <h2>Latest Items</h2>
-          <div class="table-responsive">
-            <table class="table table-striped table-sm">
-              <thead>
-                <tr>
-                  <th>Name</th>
-                  <th>Price</th>
-                  <th>Description</th>
-                  <th>Categroy</th>
-                </tr>
-              </thead>
-              <tbody>
-              {% for products in items %}
-                <tr>
-                  <td>{{products.name}}</td>
-                  <td>{{products.price}}</td>
-                  <td>{{products.description}}</td>
-                  <td>{{products.category.name}}</td>
-                </tr>
-              {% endfor %}
-              </tbody>
-            </table>
-          </div>
-        </main>
+  <div class="modal fade" id="appModal" tabindex="-1" role="dialog" aria-labelledby="appModalTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
       </div>
     </div>
-    <!-- Bootstrap core JavaScript -->
-    <script src="{{url_for('static', filename='jquery-3.2.1.slim.min.js')}}"></script>
-    <script src="{{url_for('static', filename='bootstrap.min.js')}}"></script>
-  </body>
+  </div>
+  <!-- Bootstrap core JavaScript -->
+  <script src="{{url_for('static', filename='jquery-3.3.1.min.js')}}"></script>
+  <script src="{{url_for('static', filename='bootstrap.min.js')}}"></script>
+  <script src="{{url_for('static', filename='catlog-app.script-engine.0.1.js')}}"></script>
+</body>
 </html>
