refactor links to product page.

--- a/templates/category.html
+++ b/templates/category.html
@@ -63,7 +63,7 @@
             <div class="productName"><h3>{{product.name}}</h3></div>
             <div class="productPrice">{{product.price}}</div>
             <div class="productCategory">category: <span class="badge badge-light">{{category}}</span></div>
-            <a href="/catalog/{{category}}/{{products.name}}/{{products.id}}/view/" class="btn btn-sm btn-primary btn-block">View Product</a>
+            <a href="/catalog/{{category}}/{{product.name}}/{{product.id}}/view/" class="btn btn-sm btn-primary btn-block">View Product</a>
           </div>
           {% endfor %}
         </div>
