Rename "add product" button to "create new product".

--- a/templates/category.html
+++ b/templates/category.html
@@ -50,7 +50,7 @@
           <h1 class="h2">{{category}}</h1>
           <div class="btn-toolbar mb-2 mb-md-0">
             <div class="btn-group mr-2">
-              <button class="btn btn-primary btn-sm" onclick="modalPop('newProduct')">+ Add Product</button>
+              <button class="btn btn-primary btn-sm" onclick="modalPop('newProduct')">+ Create New Product</button>
             </div>
           </div>
         </div>
