--- a/templates/_add-product.html
+++ b/templates/_add-product.html
@@ -30,6 +30,6 @@
 </div>
 <div class="modal-footer">
   <button type="reset" class="btn btn-secondary" data-dismiss="modal">Close</button>
-  <button type="submit" class="btn btn-primary">Add Product</button>
+  <button type="submit" class="btn btn-primary">Create New Product</button>
 </div>
 </form>
