Logout button popover link added to templates

--- a/templates/404.html
+++ b/templates/404.html
@@ -17,12 +17,12 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0">
+  <nav class="navbar navbar-dark  bg-dark flex-md-nowrap p-0">
     <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="/catalog/"><h2>Catalog App</h2></a>
 
     {% if user.username|length  %} <!-- if user session exist -->
     <ul class="navbar-nav px-3 pop"  data-container="body" data-toggle="popover" data-placement="left"
-    data-content="<span class='logout' onclick='doLogout'>Log Out</span>"  data-original-title="" title="">
+    data-content="<span class='logout' onclick='doLogout()'>Log Out</span>">
       <li class="nav-item text-nowrap text-center">
         <div class="profileImage">
           <img src="{{user['picture'] }}" alt="User Profile Image" />
@@ -35,7 +35,7 @@
     {% else %}
     <ul class="navbar-nav px-3">
       <li class="nav-item text-nowrap">
-        <a class="nav-link" href="#">Sign in</a>
+        <a class="nav-link" href="/login">Sign in</a>
       </li>
     </ul>
     {% endif %}
@@ -94,6 +94,7 @@
   <!-- Bootstrap core JavaScript -->
   <script src="{{url_for('static', filename='jquery-3.3.1.min.js')}}"></script>
   <script src="{{url_for('static', filename='bootstrap.min.js')}}"></script>
+  <script src="{{url_for('static', filename='bootstrap.bundle.min.js')}}"></script>
   <script src="{{url_for('static', filename='catlog-app.script-engine.0.1.js')}}"></script>
 </body>
 </html>
