--- a/templates/edit-category.html
+++ b/templates/edit-category.html
@@ -17,12 +17,12 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0">
+  <nav class="navbar navbar-dark  bg-dark flex-md-nowrap p-0">
     <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="/catalog/"><h2>Catalog App</h2></a>
 
     {% if user.username|length  %} <!-- if user session exist -->
     <ul class="navbar-nav px-3 pop"  data-container="body" data-toggle="popover" data-placement="left"
-    data-content="<span class='logout' onclick='doLogout'>Log Out</span>"  data-original-title="" title="">
+    data-content="<span class='logout' onclick='doLogout()'>Log Out</span>"  data-original-title="" title="">
       <li class="nav-item text-nowrap text-center">
         <div class="profileImage">
           <img src="{{user['picture'] }}" alt="User Profile Image" />
@@ -35,7 +35,7 @@
     {% else %}
     <ul class="navbar-nav px-3">
       <li class="nav-item text-nowrap">
-        <a class="nav-link" href="#">Sign in</a>
+        <a class="nav-link" href="/login">Sign in</a>
       </li>
     </ul>
     {% endif %}
@@ -61,7 +61,7 @@
 
       <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
         <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
-          <h1 class="h2">Edit Product - [ {{ category.name }} ]</h1>
+          <h1 class="h2">Edit Category - [ {{ category.name }} ]</h1>
           <div class="btn-toolbar mb-2 mb-md-0">
             <div class="btn-group mr-2">
             </div>
@@ -70,32 +70,15 @@
 
         <div class="row">
           <div class="col-md-6">
-            <form action="" method="post">
+            <form action="" method="post"> <!-- Action is left black to make a self POST -->
               <input type="hidden" name="hidCategoryID" id="hidCategoryID" value="{{ category.id }}">
               <div class="form-group">
-                <label for="txtName">Product Name</label>
-                <input type="text" required class="form-control" name="txtName" id="txtName" placeholder="Enter Product Name" value="{{ product.name }}">
-              </div>
-              <div class="form-group">
-                <label for="selCategory">Select Categrory</label>
-                <select class="form-control" name="selCategory" id="selCategory" required>
-                  <option value=""> - select - </option>
-                  {% for cat in categories %}
-                  <option value="{{cat.id}}" {% if cat.id == product.category_id %} selected {% endif %}>{{cat.name}}</option>
-                  {% endfor %}
-                </select>
-              </div>
-              <div class="form-group">
-                <label for="txtPrice">Price</label>
-                <input type="text" class="form-control" value="{{ product.price }}" name="txtPrice" id="txtPrice" placeholder="$00.00">
-              </div>
-              <div class="form-group">
-                <label for="txtDescription">Description</label>
-                <textarea name="txtDescription" rows="2" id="xtDescription" class="form-control" placeholder="Product Description" rows="8" cols="80">{{ product.description }}</textarea>
+                <label for="txtName">Category Name</label>
+                <input type="text" required class="form-control" name="txtName" id="txtName" placeholder="Enter Product Name" value="{{ category.name }}">
               </div>
               <div class="button-group">
                 <a href="http://localhost:5000{{ request.path | replace('/edit/','/view/') }}" class="btn btn-secondary" data-dismiss="modal">Cancel</a>
-                <button type="submit" class="btn btn-primary">Update Product</button>
+                <button type="submit" class="btn btn-primary">Update Category</button>
               </div>
             </form><br>
             {% with messages = get_flashed_messages() %}
