--- a/templates/edit.html
+++ b/templates/edit.html
@@ -81,7 +81,9 @@
                 <select class="form-control" name="selCategory" id="selCategory" required>
                   <option value=""> - select - </option>
                   {% for cat in categories %}
-                  <option value="{{cat.id}}" {% if cat.id == product.category_id %} selected {% endif %}>{{cat.name}}</option>
+                    {% if cat.user_id == user['id'] %}  <!-- Allow only categories created by logged in user -->
+                     <option value="{{cat.id}}" {% if cat.id == product.category_id %} selected {% endif %}>{{cat.name}}</option>
+                    {% endif %}
                   {% endfor %}
                 </select>
               </div>
