Added alert message to let user know that no categoreis are created.

--- a/templates/_add-product.html
+++ b/templates/_add-product.html
@@ -1,7 +1,7 @@
 {% if categories|length == 0 %}
 <br>
 <div class="alert alert-warning alert-dismissible fade show" role="alert">
-   <strong>Oops..!! You have not created any categories yet</strong><br> Please create a category to add a new product.
+   <strong>Oops..!! You have not created any categories yet.</strong><br> Please create a category to add a new product.
    <hr>
    <div class="btn-group mr-2">
      <button class="btn btn-secondary btn-sm" onclick="modalPop('newCategory')">+ Add New Category</button>
