Tidy Up Urls. Refelct "tidy up url" changes to script. [ create categroy / Product]

--- a/templates/_add-product.html
+++ b/templates/_add-product.html
@@ -11,7 +11,7 @@
   </button>
 </div>
 {% else %}
-<form action="/products/new/" method="post">
+<form action="/catalog/products/new/" method="post">
 <div class="modal-header">
   <h5 class="modal-title" id="exampleModalLongTitle">Add New Product</h5>
   <button type="button" class="close" data-dismiss="modal" aria-label="Close">
