--- a/templates/_add-category.html
+++ b/templates/_add-category.html
@@ -1,4 +1,4 @@
-<form action="/category/new/" method="post">
+<form action="/catalog/category/new/" method="post">
 <div class="modal-header">
   <h5 class="modal-title" id="exampleModalLongTitle">Add New Category</h5>
   <button type="button" class="close" data-dismiss="modal" aria-label="Close">
