--- a/templates/delete-product.html
+++ b/templates/delete-product.html
@@ -87,7 +87,7 @@
                 <hr>
                 <div class="text-right">
                   <div class="btn-group">
-                    <button class="btn btn-md btn-secondary" type="reset">Cancel</button>
+                    <a class="btn btn-md btn-secondary" href="http://localhost:5000{{ request.path | replace('/delete/','/view/') }}">Cancel</a>
                   </div>
                   <div class="btn-group">
                     <button class="btn btn-md btn-danger" type="submit">Delete</button>
