Edit and delete pages to include bootsrap bundle.

--- a/templates/edit-product.html
+++ b/templates/edit-product.html
@@ -128,6 +128,7 @@
   <!-- Bootstrap core JavaScript -->
   <script src="{{url_for('static', filename='jquery-3.3.1.min.js')}}"></script>
   <script src="{{url_for('static', filename='bootstrap.min.js')}}"></script>
+  <script src="{{url_for('static', filename='bootstrap.bundle.min.js')}}"></script>
   <script src="{{url_for('static', filename='catlog-app.script-engine.0.1.js')}}"></script>
 </body>
 </html>
