Update to urls to live server url

--- a/templates/delete-category.html
+++ b/templates/delete-category.html
@@ -87,7 +87,7 @@
                 <hr>
                 <div class="text-right">
                   <div class="btn-group">
-                    <a class="btn btn-md btn-secondary" href="http://localhost:5000{{ request.path | replace('/delete/','/view/') }}">Cancel</a>
+                    <a class="btn btn-md btn-secondary" href="http://13.234.170.208.xip.io{{ request.path | replace('/delete/','/view/') }}">Cancel</a>
                   </div>
                   <div class="btn-group">
                     <button class="btn btn-md btn-danger" type="submit">Delete</button>
