--- a/templates/edit-product.html
+++ b/templates/edit-product.html
@@ -96,7 +96,7 @@
                 <textarea name="txtDescription" rows="2" id="xtDescription" class="form-control" placeholder="Product Description" rows="8" cols="80">{{ product.description }}</textarea>
               </div>
               <div class="button-group">
-                <a href="http://localhost:5000{{ request.path | replace('/edit/','/view/') }}" class="btn btn-secondary" data-dismiss="modal">Cancel</a>
+                <a href="http://13.234.170.208.xip.io{{ request.path | replace('/edit/','/view/') }}" class="btn btn-secondary" data-dismiss="modal">Cancel</a>
                 <button type="submit" class="btn btn-primary">Update Product</button>
               </div>
             </form><br>
