--- a/templates/edit-category.html
+++ b/templates/edit-category.html
@@ -77,7 +77,7 @@
                 <input type="text" required class="form-control" name="txtName" id="txtName" placeholder="Enter Product Name" value="{{ category.name }}">
               </div>
               <div class="button-group">
-                <a href="http://localhost:5000{{ request.path | replace('/edit/','/view/') }}" class="btn btn-secondary" data-dismiss="modal">Cancel</a>
+                <a href="http://13.234.170.208.xip.io{{ request.path | replace('/edit/','/view/') }}" class="btn btn-secondary" data-dismiss="modal">Cancel</a>
                 <button type="submit" class="btn btn-primary">Update Category</button>
               </div>
             </form><br>
